--- a/shared/components/templates/venice/v1/package.json
+++ b/shared/components/templates/venice/v1/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.6.4",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@react-three/fiber": "^7.0.1",
     "drei": "2.2.17",
+    "framer-motion": "^4",
     "gsap": "3.6.0",
     "react-three-fiber": "5.3.14",
     "three": "0.124.0"
