--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "17.0.2",
     "react-query": "^3.17.2",
     "stripe": "^8.155.0",
-    "superjson": "^1.7.4"
+    "superjson": "^1.7.4",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "eslint": "7.28.0",
