--- a/shared/components/templates/venice/v1/package.json
+++ b/shared/components/templates/venice/v1/package.json
@@ -14,6 +14,8 @@
     "history": "^5.0.0",
     "react-router-dom": "^5.2.0",
     "react-three-fiber": "5.3.14",
-    "three": "0.124.0"
+    "react-waypoint": "^10.1.0",
+    "three": "0.124.0",
+    "webfontloader": "^1.6.28"
   }
 }
