--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.17.2",
+    "slate": "^0.63.0",
+    "slate-react": "^0.65.2",
     "stripe": "^8.155.0",
     "superjson": "^1.7.4",
     "webfontloader": "^1.6.28"
