--- a/package.json
+++ b/package.json
@@ -29,7 +29,14 @@
     "slate-react": "^0.65.2",
     "stripe": "^8.155.0",
     "superjson": "^1.7.4",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "@react-three/drei": "^7.1.2",
+    "@react-three/fiber": "^7.0.1",
+    "drei": "2.2.17",
+    "history": "^5.0.0",
+    "react-router-dom": "^5.2.0",
+    "react-waypoint": "^10.1.0",
+    "three": "0.124.0"
   },
   "devDependencies": {
     "eslint": "7.28.0",
