--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@chakra-ui/react": "^1.6.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fontsource/major-mono-display": "^4.5.0",
+    "@react-three/drei": "^7.1.2",
+    "@react-three/fiber": "^7.0.1",
     "@stripe/stripe-js": "^1.15.0",
     "axios": "^0.21.1",
     "babel-plugin-superjson-next": "^0.3.0",
+    "drei": "2.2.17",
     "firebase": "^8.6.7",
     "firebase-admin": "^9.9.0",
     "framer-motion": "^4",
+    "history": "^5.0.0",
     "joi": "^17.4.0",
     "nanoid": "^3.1.23",
     "next": "11.0.0",
@@ -25,18 +30,14 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.17.2",
+    "react-router-dom": "^5.2.0",
+    "react-waypoint": "^10.1.0",
     "slate": "^0.63.0",
     "slate-react": "^0.65.2",
     "stripe": "^8.155.0",
     "superjson": "^1.7.4",
-    "webfontloader": "^1.6.28",
-    "@react-three/drei": "^7.1.2",
-    "@react-three/fiber": "^7.0.1",
-    "drei": "2.2.17",
-    "history": "^5.0.0",
-    "react-router-dom": "^5.2.0",
-    "react-waypoint": "^10.1.0",
-    "three": "0.124.0"
+    "three": "0.124.0",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "eslint": "7.28.0",
