--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "framer-motion": "^4",
     "history": "^5.0.0",
     "joi": "^17.4.0",
+    "mobx": "^6.3.2",
+    "mobx-state-tree": "^5.0.2",
     "nanoid": "^3.1.23",
     "next": "11.0.0",
     "nookies": "^2.5.2",
