--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/major-mono-display": "^4.5.0",
+    "@react-spring/parallax": "^9.2.4",
     "@react-three/drei": "^7.1.2",
     "@react-three/fiber": "^7.0.1",
     "@stripe/stripe-js": "^1.15.0",
@@ -33,6 +34,7 @@
     "react-dom": "17.0.2",
     "react-query": "^3.17.2",
     "react-router-dom": "^5.2.0",
+    "react-spring": "^9.2.4",
     "react-waypoint": "^10.1.0",
     "slate": "^0.63.0",
     "slate-react": "^0.65.2",
