--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "drei": "2.2.17",
     "firebase": "^8.6.7",
     "firebase-admin": "^9.9.0",
+    "focus-visible": "^5.2.0",
     "framer-motion": "^4",
     "history": "^5.0.0",
     "joi": "^17.4.0",
