--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "react-query": "^3.17.2",
     "react-router-dom": "^5.2.0",
     "react-spring": "^9.2.4",
