--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.6.4",
+    "@ant-design/colors": "^6.0.0",
+    "@chakra-ui/react": "^1.6.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/major-mono-display": "^4.5.0",
@@ -31,9 +32,11 @@
     "nanoid": "^3.1.23",
     "next": "11.0.0",
     "nookies": "^2.5.2",
+    "popmotion": "^9.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-keyed-flatten-children": "^1.3.0",
     "react-query": "^3.17.2",
     "react-router-dom": "^5.2.0",
     "react-spring": "^9.2.4",
