--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@react-spring/parallax": "^9.2.4",
     "@react-three/drei": "^7.1.2",
     "@react-three/fiber": "^7.0.1",
+    "@rooks/use-window-size": "^4.11.2",
     "@stripe/stripe-js": "^1.15.0",
     "axios": "^0.21.1",
     "babel-plugin-superjson-next": "^0.3.0",
+    "dateformat": "^5.0.1",
     "drei": "2.2.17",
     "firebase": "^8.6.7",
     "firebase-admin": "^9.9.0",
@@ -29,6 +31,7 @@
     "history": "^5.0.0",
     "joi": "^17.4.0",
     "mobx": "^6.3.2",
+    "mobx-react": "^7.2.0",
     "mobx-state-tree": "^5.0.2",
     "nanoid": "^3.1.23",
     "next": "11.0.0",
@@ -39,6 +42,7 @@
     "react-icons": "^4.2.0",
     "react-keyed-flatten-children": "^1.3.0",
     "react-query": "^3.17.2",
+    "react-rnd": "^10.3.5",
     "react-router-dom": "^5.2.0",
     "react-spring": "^9.2.4",
     "react-waypoint": "^10.1.0",
