--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "popmotion": "^9.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hammerjs": "^1.0.1",
     "react-icons": "^4.2.0",
     "react-keyed-flatten-children": "^1.3.0",
     "react-query": "^3.17.2",
