--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hammerjs": "^1.0.1",
-    "react-icons": "^4.2.0",
+    "react-icons": "4.3.1",
     "react-keyed-flatten-children": "^1.3.0",
     "react-query": "^3.17.2",
     "react-rnd": "^10.3.5",
