--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-hammerjs": "^1.0.1",
     "react-icons": "4.3.1",
     "react-keyed-flatten-children": "^1.3.0",
+    "react-photo-gallery": "^8.0.0",
     "react-query": "^3.17.2",
     "react-rnd": "^10.3.5",
     "react-router-dom": "^5.2.0",
