--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-three/fiber": "^7.0.1",
     "@rooks/use-window-size": "^4.11.2",
     "@stripe/stripe-js": "^1.15.0",
+    "arc-text": "^1.0.1",
     "axios": "^0.21.1",
     "babel-plugin-superjson-next": "^0.3.0",
     "dateformat": "^5.0.1",
@@ -30,6 +31,7 @@
     "framer-motion": "^4",
     "history": "^5.0.0",
     "joi": "^17.4.0",
+    "lodash.throttle": "^4.1.1",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
     "mobx-state-tree": "^5.0.2",
