--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mobx-state-tree": "^5.0.2",
     "nanoid": "^3.1.25",
     "next": "11.0.0",
+    "next-seo": "^4.28.1",
     "nookies": "^2.5.2",
     "popmotion": "^9.4.0",
     "react": "17.0.2",
